--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "typeorm:rm": "(rm -f ormconfig.json) && (rm -f seeds-ormconfig.json)",
     "typeorm:prepare": "yarn typeorm:rm && ts-node -r tsconfig-paths/register src/modules/database/config/config-file-generate.ts",
     "typeorm:run": "yarn typeorm:migration:run && yarn typeorm:seeds:run",
-    "typeorm:migration:gen": "yarn typeorm migration:generate -n",
-    "typeorm:migration:run": "yarn typeorm migration:run",
+    "typeorm:migration:gen": "yarn typeorm migration:generate -p -d src/modules/database/cli/default-connection.ts",
+    "typeorm:migration:run": "yarn typeorm migration:run -d src/modules/database/cli/default-connection.ts",
     "typeorm:seeds:create": "yarn typeorm migration:create -f seeds-ormconfig.json -c seeds -n",
-    "typeorm:seeds:run": "yarn typeorm migration:run -f seeds-ormconfig.json -c seeds"
+    "typeorm:seeds:run": "yarn typeorm migration:run -f seeds-ormconfig.json -c seeds",
+    "make:migration": "chmod +x ./infra/make-migration.sh && bash ./infra/make-migration.sh"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.3",
     "@nestjs/core": "^8.4.3",
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/throttler": "^2.0.1",
+    "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.0",
     "ioredis": "^5.0.3",
@@ -40,7 +42,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "typeorm": "^0.3.5"
+    "typeorm": "0.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.4",
