--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.0",
     "ioredis": "^5.0.3",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.9",
     "@nestjs/testing": "^8.4.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.10",
