--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "typeorm": "^0.3.5",
-    "typeorm-encrypted": "^0.6.0"
+    "typeorm-encrypted": "^0.6.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.4",
@@ -59,6 +60,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
