--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@nestjs/common": "^8.4.3",
     "@nestjs/core": "^8.4.3",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
