--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:run": "yarn typeorm:migration:run && yarn typeorm:seeds:run",
+    "typeorm:run": "yarn migration:run && yarn seeds:run",
     "migration:gen": "yarn typeorm migration:generate -p -d src/modules/database/cli/default-connection.ts",
     "migration:run": "yarn typeorm migration:run -d src/modules/database/cli/default-connection.ts",
     "migration:rev": "yarn typeorm migration:revert -d src/modules/database/cli/default-connection.ts",
