--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "make:migration": "chmod +x ./infra/make-migration.sh && bash ./infra/make-migration.sh",
-    "make:seeds": "chmod +x ./infra/make-migration.sh && bash ./infra/make-seeds.sh",
-    "make:env": "chmod +x ./infra/make-env.sh && bash make.sh",
     "prepare:husky": "husky install",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,13 +21,15 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "typecheck": "yarn tsc --noEmit",
     "typewatch": "yarn tsc -w --noEmit",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:run": "yarn migration:run && yarn seeds:run",
+    "make:env": "chmod +x ./cmd/make-env.sh && bash ./cmd/make-env.sh",
+    "make:seeds": "chmod +x ./cmd/make-migration.sh && bash ./cmd/make-seeds.sh",
+    "make:migration": "chmod +x ./cmd/make-migration.sh && bash ./cmd/make-migration.sh",
     "migration:gen": "yarn typeorm migration:generate -p -d src/infra/database/cli/default-connection.ts",
     "migration:run": "yarn typeorm migration:run -d src/infra/database/cli/default-connection.ts",
     "migration:rev": "yarn typeorm migration:revert -d src/infra/database/cli/default-connection.ts",
-    "seeds:gen": "yarn typeorm migration:generate -d src/infra/database/cli/seeds-connection.ts",
-    "seeds:run": "yarn typeorm migration:run -d src/infra/database/cli/seeds-connection.ts"
+    "seeds:run": "yarn typeorm migration:run -d src/infra/database/cli/seeds-connection.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:run": "yarn migration:run && yarn seeds:run"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.3",
