--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "migration:run": "yarn typeorm migration:run -d src/infra/database/cli/default-connection.ts",
     "migration:rev": "yarn typeorm migration:revert -d src/infra/database/cli/default-connection.ts",
     "seeds:run": "yarn typeorm migration:run -d src/infra/database/cli/seeds-connection.ts",
+    "seeds:rev": "yarn typeorm migration:revert -d src/infra/database/cli/seeds-connection.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:run": "yarn migration:run && yarn seeds:run"
   },
